--- a/Rock.html
+++ b/Rock.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elon Msuk</title><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"><link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>SongR</title><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"><link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
