--- a/classical.html
+++ b/classical.html
@@ -27,7 +27,7 @@
                 </ul>
         </div>
         <div class="description">
-            <h1 style="text-align: center; margin-bottom: 3vmin;">Rock</h1>
+            <h1 style="text-align: center; margin-bottom: 3vmin;">Classical</h1>
             <div class="song">
             <h1>Zip2:</h1>
             <img src="assets/Zip2.jpg" alt=""><br>
