--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
            
         <a class="logo" href="index.html">SongR</a>   
         <div class="song" id="another">
-            songR est un platforme de vende de de fichiers musicaux, disponible en trois genre <a href="rock.html">Rock</a>, <a href="opera">opera</a> et <a href="classical">classical</a>   et 
+            songR est un platforme de vende de fichiers musicaux, disponible en trois genre <a href="rock.html">Rock</a>, <a href="opera">opera</a> et <a href="classical">classical</a>   et 
         </div>
     </div>
     </section>
