--- a/classical.html
+++ b/classical.html
@@ -22,19 +22,51 @@
     <section class="content">
         <div class="aside">
                 <ul>
-                    <li><a href="Zip2.html">Zip2 - 1995</a></li>
+                    <li><a href="#1">Moonlight Sonata</a></li>
+                    <li><a href="#2">Prelude</a></li>
+                    <li><a href="#3">Serenade No. 13</a></li>
+                    <li><a href="#4">Für Elise</a></li>
+                    <li><a href="#5">Prelude Op.28</a></li>
                     
                 </ul>
         </div>
         <div class="description">
             <h1 style="text-align: center; margin-bottom: 3vmin;">Classical</h1>
-            <div class="song">
-            <h1>Zip2:</h1>
-            <img src="assets/Zip2.jpg" alt=""><br>
-            En 1995, Elon Musk co-fonde la compagnie Zip2, éditeur d'un logiciel 
+            <!---->
+            <div id="1" class="song">
+            <h1>Moonlight Sonata:</h1>
+            <img src="assets/moonlight.jpg" alt=""><br>
+            Par: Beethoven, année: 1807
             <button>acheter</button>
             </div>
-            
+           <!----> 
+            <div id="2" class="song">
+                <h1>Prelude:</h1>
+                <img src="assets/prelude.jpg" alt=""><br>
+            Par: Bach, année: 1854
+                <button>acheter</button>
+            </div>
+           <!----> 
+            <div id="3" class="song">
+                <h1>Serenade No. 13:</h1>
+                <img src="assets/serenade.jpg" alt=""><br>
+            Par: Mozart, année: 1793
+                <button>acheter</button>
+            </div>
+           <!----> 
+            <div id="4" class="song">
+                    <h1>Für Elise:</h1>
+                    <img src="assets/fur elise.jpg" alt=""><br>
+                    Par: Beethoven, année: 1817
+                    <button>acheter</button>
+            </div>
+           <!----> 
+            <div id="5" class="song">
+                        <h1>Prelude Op.28:</h1>
+                        <img src="assets/prelude.jpg" alt=""><br>
+            Par: chopin, année: 1803
+            <button>acheter</button>
+            </div>
         </div>
     </section>
     <footer>
