--- a/opera.html
+++ b/opera.html
@@ -22,19 +22,47 @@
     <section class="content">
         <div class="aside">
                 <ul>
-                    <li><a href="Zip2.html">Zip2 - 1995</a></li>
+                    <li><a href="#1">Don Carlos: "O' Don Fatal"</a></li>
+                    <li><a href="#2">Norma: "Casta Diva"</a></li>
+                    <li><a href="#3">Il trovatore: "Condotta ell'era in ceppi"</a></li>
+                    <li><a href="#4">Turandot: "Nessun dorma"</a></li>
+                    <li><a href="#5">Il trovatore: "Tacea la notte placida" </a></li>
                     
                 </ul>
         </div>
         <div class="description">
-            <h1 style="text-align: center; margin-bottom: 3vmin;">Opera</h1>
-            <div class="song">
-            <h1>Zip2:</h1>
-            <img src="assets/Zip2.jpg" alt=""><br>
-            En 1995, Elon Musk co-fonde la compagnie Zip2, éditeur d'un logiciel 
+        <h1 style="text-align: center; margin-bottom: 3vmin;">Opera</h1>
+        <div id="1" class="song">
+            <h1>Don Carlos: "O' Don Fatal":</h1>
+            <img src="assets/don carlos_opera.jpg" alt=""><br>
+            Par: Don Carlos, année: 1859
             <button>acheter</button>
-            </div>
-            
+        </div>
+            <div id="2" class="song">
+            <h1>Norma: "Casta Diva":</h1>
+            <img src="assets/norma-opera.jpg" alt=""><br>
+            Par: Norma, année de creation: 1798
+            <button>acheter</button>
+        </div>
+            <div id="3" class="song">
+            <h1>Il trovatore: "Condotta ell'era in ceppi":</h1>
+            <img src="assets/trovatore-opera.jpg" alt=""><br>
+            Par:Il trovatore, année: 1789
+            <button>acheter</button>
+        </div>
+            <div id="4" class="song">
+            <h1>Turandot: "Nessun dorma":</h1>
+            <img src="assets/turandor-oprera.jpg" alt=""><br>
+            Par:Turandot, année: 1765
+            <button>acheter</button>
+        </div>
+            <div id="5" class="song">
+            <h1>Il trovatore: "Tacea la notte placida" 
+                :</h1>
+            <img src="assets/tovat_opera.jpg" alt=""><br>
+               Par: Il trovatore, année: 1745 
+            <button>acheter</button>
+        </div>
         </div>
     </section>
     <footer>
