--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
     <section class="content">
-        <div class="description">
+        <div class="description" style="overflow-x: hidden;">
             <h1 style="text-align: center; margin-bottom: 3vmin;">Demande de Contact</h1>
             <div class="contact">
             <label for="fname">Nom</label>
@@ -48,7 +48,7 @@
             </select>
             <br><br>
             Comment:<br>
-            <textarea rows="4" cols="110" name="comment"></textarea> 
+            <textarea rows="4" cols="50" name="comment"></textarea> 
             <br><br>
             <input type="submit" value="Envoyer" class="submit">
         </div>
