--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
        
         <div class="description small" style="max-width: 400px; ">
            
-        <a class="logo" href="index.html">SongR</a>   
-        <div class="song" id="another">
-            songR est un platforme de vende de fichiers musicaux, disponible en trois genre <a href="rock.html">Rock</a>, <a href="opera">opera</a> et <a href="classical">classical</a>   et 
+        <a class="logo" href="index.html">SongR:</a>   
+        <div class="song" id="another" style="background-color: rgba(255, 255, 255, 0);">
+            songR est une platforme de vente de fichiers musicaux, disponible en trois genre <a href="rock.html">Rock</a>, <a href="opera.html">opera</a> et <a href="classical.html">classic</a>
         </div>
     </div>
     </section>
