--- a/classical.html
+++ b/classical.html
@@ -1,76 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elon Msuk</title><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"><link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>Classical</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="js/js.js"></script>
 </head>
+
 <body>
     <nav>
-        <a href="index.html">SongR</a>
-
+            <img src="assets/logo.png" alt="logo">
+            <a href="index.html">SongR</a>
         <ul class="pagesL">
-            <li><a class="page selected" href="index.html">Acceuil</a></li>
+            <li><a class="page" href="index.html">Acceuil</a></li>
             <li><a class="page" href="Rock.html">Rock</a></li>
-            <li><a class="page" href="opera.html">opera</a></li>
-            <li><a class="page" href="classical.html">classical</a></li>
-            <li><a class="page" href="contact.html">contact</a></li>
+            <li><a class="page" href="Opera.html">Opera</a></li>
+            <li><a class="page" href="Classical.html">Classical</a></li>
+            <li><a class="page" href="Contact.html">Contact</a></li>
         </ul>
     </nav>
+
     <section class="content">
         <div class="aside">
-                <ul>
-                    <li><a href="#1">Moonlight Sonata</a></li>
-                    <li><a href="#2">Prelude</a></li>
-                    <li><a href="#3">Serenade No. 13</a></li>
-                    <li><a href="#4">Für Elise</a></li>
-                    <li><a href="#5">Prelude Op.28</a></li>
-                    
-                </ul>
+            <ul>
+            <li><a href="#1">Moonlight Sonata</a></li>
+                <li><a href="#2">Prelude</a></li>
+                <li><a href="#3">Serenade No. 13</a></li>
+                <li><a href="#4">Für Elise</a></li>
+                <li><a href="#5">Prelude Op.28</a></li>
+
+            </ul>
         </div>
         <div class="description">
-            <h1 style="text-align: center; margin-bottom: 3vmin;">Classical</h1>
+            <h1>Classical</h1>
+            <button id="stock">Stock</button>
             <!---->
             <div id="1" class="song">
-            <h1>Moonlight Sonata:</h1>
-            <img src="assets/moonlight.jpg" alt=""><br>
-            Par: Beethoven, année: 1807
-            <button>acheter</button>
+                <h1>Moonlight Sonata:</h1>
+                <div>
+                    <img src="assets/moonlight.jpg" alt="">
+                    <div class="displayStock">
+                        <h4>dd</h4>
+                    </div>
+                </div>
+
+                Par: Beethoven, année: 1807
+                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <button>Ajouter au panier</button>
             </div>
-           <!----> 
+            <!---->
             <div id="2" class="song">
                 <h1>Prelude:</h1>
-                <img src="assets/prelude.jpg" alt=""><br>
-            Par: Bach, année: 1854
-                <button>acheter</button>
+                <div>
+                    <img src="assets/prelude.jpg" alt="">
+                    <div class="displayStock">
+                        <h4>dd</h4>
+                    </div>
+                </div>
+                Par: Bach, année: 1854
+                <div class="ItemCtrl"><button>-</button><input value="0" type="text" ><button>+</button></div>
+                <button>Ajouter au panier</button>
             </div>
-           <!----> 
+            <!---->
             <div id="3" class="song">
                 <h1>Serenade No. 13:</h1>
-                <img src="assets/serenade.jpg" alt=""><br>
-            Par: Mozart, année: 1793
-                <button>acheter</button>
+                <div>
+                    <img src="assets/serenade.jpg" alt="">
+                    <div class="displayStock">
+                        <h4>dd</h4>
+                    </div>
+                </div>
+                Par: Mozart, année: 1793
+                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <button>Ajouter au panier</button>
             </div>
-           <!----> 
+            <!---->
             <div id="4" class="song">
-                    <h1>Für Elise:</h1>
-                    <img src="assets/fur elise.jpg" alt=""><br>
-                    Par: Beethoven, année: 1817
-                    <button>acheter</button>
+                <h1>Für Elise:</h1>
+                <div>
+                    <img src="assets/fur elise.jpg" alt="">
+                    <div class="displayStock">
+                        <h4>dd</h4>
+                    </div>
+                </div>
+                Par: Beethoven, année: 1817
+                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <button>Ajouter au panier</button>
             </div>
-           <!----> 
+            <!---->
             <div id="5" class="song">
-                        <h1>Prelude Op.28:</h1>
-                        <img src="assets/prelude.jpg" alt=""><br>
-            Par: chopin, année: 1803
-            <button>acheter</button>
+                <h1>Prelude Op.28:</h1>
+                <div>
+                    <img src="assets/prelude.jpg" alt="">
+                    <div class="displayStock">
+                        <h4>dd</h4>
+                    </div>
+                </div>
+                Par: chopin, année: 1803
+                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <button>Ajouter au panier</button>
             </div>
         </div>
     </section>
+
+
     <footer>
         <p>Copyright &copy; 2020 Wadjinny ilyas.</p>
     </footer>
 </body>
+
 </html>
