--- a/Rock.html
+++ b/Rock.html
@@ -45,10 +45,10 @@
                 </h1>
                 <div>
                     <img src="assets/soad.jpg" alt="">
-                    <div class="displayStock"><h4>dd</h4></div>
+                    <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par: System of a down, année: 2005
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text"><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
             <!---->
@@ -58,10 +58,10 @@
                 </h1>
                 <div>
                     <img src="assets/queen.jpg" alt="">
-                    <div class="displayStock"><h4>dd</h4></div>
+                    <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par Queen, année: 1994
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text"><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
             <!---->
@@ -71,10 +71,10 @@
                 </h1>
                 <div>
                     <img src="assets/radiohead.jpg" alt="">
-                    <div class="displayStock"><h4>dd</h4></div>
+                    <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par: RadioHead, année: 1990
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text"><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
             <!---->
@@ -84,10 +84,10 @@
                 </h1>
                 <div>
                     <img src="assets/nirvana.jpg" alt="">
-                    <div class="displayStock"><h4>dd</h4></div>
+                    <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par: Nirvana, année: 1991
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text"><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
             <!---->
@@ -97,10 +97,10 @@
                 </h1>
                 <div>
                     <img src="assets/godsmack.jpg" alt="">
-                    <div class="displayStock"><h4>dd</h4></div>
+                    <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par: GodSmack, année: 2000
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text"><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
 
