--- a/classical.html
+++ b/classical.html
@@ -45,12 +45,12 @@
                 <div>
                     <img src="assets/moonlight.jpg" alt="">
                     <div class="displayStock">
-                        <h4>dd</h4>
+                        <h4>0</h4>
                     </div>
                 </div>
 
                 Par: Beethoven, année: 1807
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text"><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
             <!---->
@@ -59,11 +59,11 @@
                 <div>
                     <img src="assets/prelude.jpg" alt="">
                     <div class="displayStock">
-                        <h4>dd</h4>
+                        <h4>0</h4>
                     </div>
                 </div>
                 Par: Bach, année: 1854
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text" ><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text" ><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
             <!---->
@@ -72,11 +72,11 @@
                 <div>
                     <img src="assets/serenade.jpg" alt="">
                     <div class="displayStock">
-                        <h4>dd</h4>
+                        <h4>0</h4>
                     </div>
                 </div>
                 Par: Mozart, année: 1793
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text"><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
             <!---->
@@ -85,11 +85,11 @@
                 <div>
                     <img src="assets/fur elise.jpg" alt="">
                     <div class="displayStock">
-                        <h4>dd</h4>
+                        <h4>0</h4>
                     </div>
                 </div>
                 Par: Beethoven, année: 1817
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text"><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
             <!---->
@@ -98,11 +98,11 @@
                 <div>
                     <img src="assets/prelude.jpg" alt="">
                     <div class="displayStock">
-                        <h4>dd</h4>
+                        <h4>0</h4>
                     </div>
                 </div>
                 Par: chopin, année: 1803
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text"><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
         </div>
