--- a/opera.html
+++ b/opera.html
@@ -43,40 +43,40 @@
                 <h1>Don Carlos: "O' Don Fatal":</h1>
                 <div>
                     <img src="assets/don carlos_Opera.jpg" alt="">
-                    <div class="displayStock"><h4>dd</h4></div>
+                    <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par: Don Carlos, année: 1859
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text"><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
             <div id="2" class="song">
                 <h1>Norma: "Casta Diva":</h1>
                 <div>
                     <img src="assets/norma-Opera.jpg" alt="">
-                    <div class="displayStock"><h4>dd</h4></div>
+                    <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par: Norma, année de creation: 1798
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text"><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
             <div id="3" class="song">
                 <h1>Il trovatore: "Condotta ell'era in ceppi":</h1>
                 <div>
                     <img src="assets/trovatore-Opera.jpg" alt="">
-                    <div class="displayStock"><h4>dd</h4></div>
+                    <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par:Il trovatore, année: 1789
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text"><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
             <div id="4" class="song">
                 <h1>Turandot: "Nessun dorma":</h1>
                 <div>
                     <img src="assets/turandor-oprera.jpg" alt="">
-                    <div class="displayStock"><h4>dd</h4></div>
+                    <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par:Turandot, année: 1765
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text"><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
             <div id="5" class="song">
@@ -84,10 +84,10 @@
                     :</h1>
                 <div>
                     <img src="assets/tovat_Opera.jpg" alt="">
-                    <div class="displayStock"><h4>dd</h4></div>
+                    <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par: Il trovatore, année: 1745
-                <div class="ItemCtrl"><button>-</button><input value="0" type="text"><button>+</button></div>
+                <div class="ItemCtrl"><button disabled>-</button><input value="0" type="text"><button>+</button></div>
                 <button>Ajouter au panier</button>
             </div>
         </div>
