changing naming conv

--- a/Rock.html
+++ b/Rock.html
@@ -8,13 +8,13 @@
     <title>Rock</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/js.js"></script>
 </head>
 
 <body>
     <nav>
-        <img src="assets/logo.png" alt="logo">
+        <img src="img/logo.png" alt="logo">
         <a href="index.html">SongR</a>
         <ul class="pagesL">
             <li><a class="page" href="index.html">Acceuil</a></li>
@@ -44,7 +44,7 @@
                     Such a lonely day:
                 </h1>
                 <div>
-                    <img src="assets/soad.jpg" alt="">
+                    <img src="img/soad.jpg" alt="">
                     <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par: System of a down, année: 2005
@@ -57,7 +57,7 @@
                     bohemian rhapsody queen:
                 </h1>
                 <div>
-                    <img src="assets/queen.jpg" alt="">
+                    <img src="img/queen.jpg" alt="">
                     <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par Queen, année: 1994
@@ -70,7 +70,7 @@
                     Creep:
                 </h1>
                 <div>
-                    <img src="assets/radiohead.jpg" alt="">
+                    <img src="img/radiohead.jpg" alt="">
                     <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par: RadioHead, année: 1990
@@ -83,7 +83,7 @@
                     feels like teen spirit:
                 </h1>
                 <div>
-                    <img src="assets/nirvana.jpg" alt="">
+                    <img src="img/nirvana.jpg" alt="">
                     <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par: Nirvana, année: 1991
@@ -96,7 +96,7 @@
                     I stand alone:
                 </h1>
                 <div>
-                    <img src="assets/godsmack.jpg" alt="">
+                    <img src="img/godsmack.jpg" alt="">
                     <div class="displayStock"><h4>0</h4></div>
                 </div>
                 Par: GodSmack, année: 2000
