--- a/classical.html
+++ b/classical.html
@@ -8,13 +8,13 @@
     <title>Classical</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/js.js"></script>
 </head>
 
 <body>
     <nav>
-            <img src="assets/logo.png" alt="logo">
+            <img src="img/logo.png" alt="logo">
             <a href="index.html">SongR</a>
         <ul class="pagesL">
             <li><a class="page" href="index.html">Acceuil</a></li>
@@ -43,7 +43,7 @@
             <div id="1" class="song">
                 <h1>Moonlight Sonata:</h1>
                 <div>
-                    <img src="assets/moonlight.jpg" alt="">
+                    <img src="img/moonlight.jpg" alt="">
                     <div class="displayStock">
                         <h4>0</h4>
                     </div>
@@ -57,7 +57,7 @@
             <div id="2" class="song">
                 <h1>Prelude:</h1>
                 <div>
-                    <img src="assets/prelude.jpg" alt="">
+                    <img src="img/prelude.jpg" alt="">
                     <div class="displayStock">
                         <h4>0</h4>
                     </div>
@@ -70,7 +70,7 @@
             <div id="3" class="song">
                 <h1>Serenade No. 13:</h1>
                 <div>
-                    <img src="assets/serenade.jpg" alt="">
+                    <img src="img/serenade.jpg" alt="">
                     <div class="displayStock">
                         <h4>0</h4>
                     </div>
@@ -83,7 +83,7 @@
             <div id="4" class="song">
                 <h1>Für Elise:</h1>
                 <div>
-                    <img src="assets/fur elise.jpg" alt="">
+                    <img src="img/fur elise.jpg" alt="">
                     <div class="displayStock">
                         <h4>0</h4>
                     </div>
@@ -96,7 +96,7 @@
             <div id="5" class="song">
                 <h1>Prelude Op.28:</h1>
                 <div>
-                    <img src="assets/prelude.jpg" alt="">
+                    <img src="img/prelude.jpg" alt="">
                     <div class="displayStock">
                         <h4>0</h4>
                     </div>
