--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,13 @@
   <title>Contact</title>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="js/js.js"></script>
 </head>
 
 <body>
   <nav>
-    <img src="assets/logo.png" alt="logo">
+    <img src="img/logo.png" alt="logo">
     <a href="index.html">SongR</a>
     <ul class="pagesL">
       <li><a class="page" href="index.html">Acceuil</a></li>
