--- a/classical.html
+++ b/classical.html
@@ -83,7 +83,7 @@
             <div id="4" class="song">
                 <h1>Für Elise:</h1>
                 <div>
-                    <img src="img/fur elise.jpg" alt="">
+                    <img src="img/fur_elise.jpg" alt="">
                     <div class="displayStock">
                         <h4>0</h4>
                     </div>
